# profile-pattern-diagnostics

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
Docs/Diagrams/: image_1_analysis_flow.mmd
examples/: README.md
examples/Databases/: cohort_diverse_example.db  cohort_diverse_final.db  cohort_example_test.db  cohort_final_test.db
examples/Notebooks/: dev_visualiser.ipynb
examples/Scripts/sql/: sql_data_geneartor_script_1.sql  sql_data_geneartor_script_2.sql
examples/input/individual_tests/: balanced_uniform_high.json  balanced_uniform_low.json  bottleneck_single_group.json  mixed_realistic.json  noisy_group.json  polarised_group.json
examples/output/: balanced_uniform_high_report.json  balanced_uniform_low_report.json  bottleneck_single_group_report.json  mixed_realistic_report.json  noisy_group_report.json  polarised_group_report.json
src/ppd/: __main__.py  io.py
src/ppd/candidate/: adjacency.py  analyze.py  metrics.py  normalize.py  patterns.py
src/ppd/cohort/: __init__.py  candidate_pass.py  cohort_stats.py  materialise.py
src/ppd/policy/: __init__.py  ethics.py
tests/: test_candidate_adjacency.py  test_candidate_analyze.py  test_candidate_metrics.py  test_candidate_patterns.py  test_candidate_report.py  test_cohort_cand_pass.py  test_cohort_materialise.py  test_io_roundtrip.py  test_normalization.py  test_schema_input.py  test_schema_output.py
tests/_legacy/: legacy_cohort_dimension_metrics.py  legacy_cohort_report.py  legacy_cohort_summarize.py  legacy_group_aggregation.py  legacy_group_metrics.py  legacy_percentile.py
(+14 files in other folders)
